--- a/html/activitats.html
+++ b/html/activitats.html
@@ -41,29 +41,46 @@
 
             </div>
             <div class="mid-div-mid">
-                <h1 class="text-header">
-                    Inscripcions</h1>
-                <pre class="text">
-                    Si vols formar part del nostre club, no dubtis en posar-te en contacte amb nosaltres.
-                    Ens trobem situats a la ciutat esportiva de Blanes.
-                </pre>
-                <pre>Per solicitar plaça omple el seguent formulari.</pre>
-                <div class="form"></div>
-                <form class="form-inscripcions" action="redirect.html" method="POST">
-                    <label for="nom">Nom:</label>
-                    <input type="text" id="nom" name="nom" required>
-                    <label for="cognom">Cognom:</label>
-                    <input type="text" id="cognom" name="cognom" required>
-                    <label for="dni">DNI:</label>
-                    <input type="text" id="dni" name="dni" required>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                    <label for="telefon">Telèfon:</label>
-                    <input type="text" id="telefon" name="telefon" required>
-                    <label for="data">Data de naixement:</label>
-                    <input type="date" id="data" name="data" required>                    
-                    <button onclick="" class="send-button" type="submit" class="submit"><i class="bi bi-send-fill"></i></button>
-            </div>
+                <table>
+                    <tr>
+                        <th>Trampoli</th>
+                        <td><pre>Durant aquesta activitat els alumnes practiquen salts de trampoli,
+disposem de grups de diferents nivells i edats.</pre></td>
+                    </tr>
+                    <tr>
+                        <th>Natacio recreativa</th>
+                        <td><pre>En aquesta activitat es un espai de temps obert per a tot el public
+per disfrutar de la natacio al seu ritme</pre></td>
+                    </tr>
+                    <tr>
+                        <th>Waterpolo</th>
+                        <td><pre>Es un esport d'equip que es practica a la piscina, el nostre equip 
+es tot un referent pel que fa a altres equips de la zona, tenim mes de
+10 anys d'experiencia en waterpolo i diferents campionats al nostre nom.
+                    </tr>
+                    <tr>
+                        <th>Salt de plataforma</th>
+                        <td><pre>Es una activitat que es practica a la piscina, es un esport
+individualen el cual s'apren a realitzar salts desde diferents alçades, 
+el nostre equip te presencia a nivell internacional en aquesta categoria.
+                    </tr>
+                    <tr>
+                        <th>Natacio sincronitzada</th>
+                        <td><pre>Es un esport colectiu en el que predomina la coordinacio i la destresa,
+el nostre equip te una gran reputacio en aquest esport,
+disposem de grups de diferents nivells i edats.</pre></td>
+                    </tr>
+                    <tr>
+                        <th>Equip de competicio</th>
+                        <td><pre>Disposem d'un equip de competicio en diferents categories, 
+per accedir-hi s'han de superar proves de nivell, les proves es
+faran el primer dia de cada mes.</pre></td>
+                    </tr>
+                    <tr>
+                        <th>Formacio de socorrisme</th>
+                        <td><pre>Disposem de formacio de socorrisme, s'ha de realitzar un curs de 3 mesos i 
+s'obte el titul per exercir de socorrista.</pre></td>
+                </table>
             <div class="mid-div-right">
             </div>
         </div>
