--- a/html/redirect.html
+++ b/html/redirect.html
@@ -41,29 +41,8 @@
 
             </div>
             <div class="mid-div-mid">
-                <h1 class="text-header">
-                    Inscripcions</h1>
-                <pre class="text">
-                    Si vols formar part del nostre club, no dubtis en posar-te en contacte amb nosaltres.
-                    Ens trobem situats a la ciutat esportiva de Blanes.
-                </pre>
-                <pre>Per solicitar plaça omple el seguent formulari.</pre>
-                <div class="form"></div>
-                <form class="form-inscripcions" action="redirect.html" method="POST">
-                    <label for="nom">Nom:</label>
-                    <input type="text" id="nom" name="nom" required>
-                    <label for="cognom">Cognom:</label>
-                    <input type="text" id="cognom" name="cognom" required>
-                    <label for="dni">DNI:</label>
-                    <input type="text" id="dni" name="dni" required>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                    <label for="telefon">Telèfon:</label>
-                    <input type="text" id="telefon" name="telefon" required>
-                    <label for="data">Data de naixement:</label>
-                    <input type="date" id="data" name="data" required>                    
-                    <button onclick="" class="send-button" type="submit" class="submit"><i class="bi bi-send-fill"></i></button>
-            </div>
+                <pre class="text">La informacion se ha registrado correctamente, en breve recibira un correo con los datos de la reunion.</pre>
+                <a href="./../index.html"> Volvel a la pagina principal</a>
             <div class="mid-div-right">
             </div>
         </div>
