--- a/html/activitats.html
+++ b/html/activitats.html
@@ -41,7 +41,7 @@
 
             </div>
             <div class="mid-div-mid">
-                <table>
+                <table class="activitats-table">
                     <tr>
                         <th>Trampoli</th>
                         <td><pre>Durant aquesta activitat els alumnes practiquen salts de trampoli,
