--- a/html/carnet_piscina.html
+++ b/html/carnet_piscina.html
@@ -42,7 +42,7 @@
             </div>
             <div class="mid-div-mid">
                 <table class="carnet-table" style="width: 100%;">
-                    <caption>Carnet de piscina</caption>
+                    <caption class="carnet-caption">Carnet de piscina</caption>
                     <tr class="carnet-row">
                     
                         <th>Nom</th>
