--- a/html/inscripcions.html
+++ b/html/inscripcions.html
@@ -13,7 +13,7 @@
                 
             </div>
             <div class="title-div">
-                <a class="title-text" href="index.html">Club Natacio Blanes</a>
+                <a class="title-text" href="./../index.html">Club Natacio Blanes</a>
             </div>
             <div class="menu-div">
                 <div class="button-div">
