--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
                 <a class="title-text" href="index.html">Club Natacio Blanes</a>
             </div>
             <div class="menu-div">
+                <a class="menu-option" href="html/geleria.html">Galeria</a>
+                <a class="menu-option" href="html/qui_som.html">Qui som</a>
+                <a class="menu-option" href="html/contacte.html">Contacte</a>
                 <div class="button-div">
-                    <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"></path>
                         </svg>
                     </button>
@@ -44,7 +47,7 @@
             <div class="mid-div-mid">
 <h1 class="text-header">
     Club de Natacio Blanes</h1>
-<pre class="text">
+<pre class="text-black">
     Som un club esportiu especialitzat en esport d'aigua en concret
     la natació. Disposem de piscina coberta i piscina exterior
     per a tots els nostres socis. A més, disposem de diferents
@@ -67,9 +70,9 @@
     </section>
     <section class="bottom">
         <div class="bottom-div">
-                <pre class="text">
+                <pre class="bottom-text">
                     Telèfon: 972 35 00 00
-                    Correu:
+                    Correu: informacio@clubnatacioblanes.com
         </div>
     </section>
 </html>
