--- a/html/plantilla.html
+++ b/html/plantilla.html
@@ -3,21 +3,21 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="icon" type="image/x-icon" href="./../resources/images-removebg-preview.png">
+    <link rel="icon" type="image/x-icon" href="./.././../resources/images-removebg-preview.png">
 </head>
 <html>
     <section class="top">
         <div class="top-div">
             <div class="logo-div">
-                <img class="logo" src="./../resources/images-removebg-preview.png">
+                <img class="logo" src="./.././../resources/images-removebg-preview.png">
                 
             </div>
             <div class="title-div">
-                <a class="title-text" href="index.html">Club Natacio Blanes</a>
+                <a class="title-text" href="./../index.html">Club Natacio Blanes</a>
             </div>
             <div class="menu-div">
                 <div class="button-div">
-                    <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"></path>
                         </svg>
                     </button>
@@ -124,7 +124,7 @@
         <div class="bottom-div">
                 <pre class="text">
                     Telèfon: 972 35 00 00
-                    Correu:
+                    Correu: informacio@clubnatacioblanes.com
         </div>
     </section>
 </html>
