--- a/html/galeria.html
+++ b/html/galeria.html
@@ -2,7 +2,7 @@
     <title>Club Natacio Blanes</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./../css/style.css">
-    <link rel="stylesheet" href="./../css/activitats.css">
+    <link rel="stylesheet" href="./../css/galeria.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/x-icon" href="./.././../resources/images-removebg-preview.png">
 </head>
@@ -19,7 +19,7 @@
             <div class="menu-div">
                 <a class="menu-option" href="./galeria.html">Galeria</a>
                 <a class="menu-option" href="./quisom.html">Qui som</a>
-                <a class="menu-option" href="./contacte.html">Contacte</a>
+                <a class="menu-option" href="./Contacte.html">Contacte</a>
                 <div class="button-div">
                     <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"></path>
@@ -45,45 +45,22 @@
 
             </div>
             <div class="mid-div-mid">
-                <table class="activitats-table">
+                <table class="mosaico">
                     <tr>
-                        <th>Trampoli</th>
-                        <td><pre>Durant aquesta activitat els alumnes practiquen salts de trampoli,
-disposem de grups de diferents nivells i edats.</pre></td>
+                        <th><a href="./../resources/galeria/galeria1.jfif"><img src="./../resources/galeria/galeria1.jfif" alt="Foto 1"></a></th>
+                        <th><a href="./../resources/galeria/galeria2.jfif"><img src="./../resources/galeria/galeria2.jfif" alt="Foto 2"></a></th>
+                        <th><a href="./../resources/galeria/galeria3.jfif"><img src="./../resources/galeria/galeria3.jfif" alt="Foto 3"></a></th>
                     </tr>
                     <tr>
-                        <th>Natacio recreativa</th>
-                        <td><pre>En aquesta activitat es un espai de temps obert per a tot el public
-per disfrutar de la natacio al seu ritme</pre></td>
+                        <th><a href="./../resources/galeria/galeria4.jfif"><img src="./../resources/galeria/galeria4.jfif" alt="Foto4"></a></th>
+                        <th><a href="./../resources/galeria/galeria5.jfif"><img src="./../resources/galeria/galeria5.jfif" alt="Foto5"></a></th>
+                        <th><a href="./../resources/galeria/galeria6.jfif"><img src="./../resources/galeria/galeria6.jfif" alt="Foto6"></a></th>
                     </tr>
                     <tr>
-                        <th>Waterpolo</th>
-                        <td><pre>Es un esport d'equip que es practica a la piscina, el nostre equip 
-es tot un referent pel que fa a altres equips de la zona, tenim mes de
-10 anys d'experiencia en waterpolo i diferents campionats al nostre nom.
+                        <th><a href="./../resources/galeria/galeria7.jfif"><img src="./../resources/galeria/galeria7.jfif" alt="Foto7"></a></th>
+                        <th><a href="./../resources/galeria/galeria8.jfif"><img src="./../resources/galeria/galeria8.jfif" alt="Foto8"></a></th>
+                        <th><a href="./../resources/galeria/galeria9.jfif"><img src="./../resources/galeria/galeria9.jfif" alt="Foto9"></a></th>
                     </tr>
-                    <tr>
-                        <th>Salt de plataforma</th>
-                        <td><pre>Es una activitat que es practica a la piscina, es un esport
-individualen el cual s'apren a realitzar salts desde diferents alçades, 
-el nostre equip te presencia a nivell internacional en aquesta categoria.
-                    </tr>
-                    <tr>
-                        <th>Natacio sincronitzada</th>
-                        <td><pre>Es un esport colectiu en el que predomina la coordinacio i la destresa,
-el nostre equip te una gran reputacio en aquest esport,
-disposem de grups de diferents nivells i edats.</pre></td>
-                    </tr>
-                    <tr>
-                        <th>Equip de competicio</th>
-                        <td><pre>Disposem d'un equip de competicio en diferents categories, 
-per accedir-hi s'han de superar proves de nivell, les proves es
-faran el primer dia de cada mes.</pre></td>
-                    </tr>
-                    <tr>
-                        <th>Formacio de socorrisme</th>
-                        <td><pre>Disposem de formacio de socorrisme, s'ha de realitzar un curs de 3 mesos i 
-s'obte el titul per exercir de socorrista.</pre></td>
                 </table>
             <div class="mid-div-right">
             </div>
