--- a/html/redirect.html
+++ b/html/redirect.html
@@ -16,9 +16,9 @@
                 <a class="title-text" href="./../index.html">Club Natacio Blanes</a>
             </div>
             <div class="menu-div">
-                <a class="menu-option" href="./galeria.html">Galeria</a>
-                <a class="menu-option" href="./galeria.html">Qui som</a>
-                <a class="menu-option" href="./galeria.html">Contacte</a>
+                <a class="menu-option" href="galeria.html">Galeria</a>
+                <a class="menu-option" href="qui_som.html">Qui som</a>
+                <a class="menu-option" href="contacte.html">Contacte</a>
                 <div class="button-div">
                     <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"></path>
@@ -45,16 +45,16 @@
             </div>
             <div class="mid-div-mid">
                 <pre class="text">La informacion se ha registrado correctamente, en breve recibira un correo con los datos de la reunion.</pre>
-                <a href="./.././../index.html"> Volvel a la pagina principal</a>
+                <a href="./../index.html"> Volvel a la pagina principal</a>
             <div class="mid-div-right">
             </div>
         </div>
     </section>
     <section class="bottom">
         <div class="bottom-div">
-                <pre class="text">
+                <pre class="bottom-text">
                     Telèfon: 972 35 00 00
-                    Correu: informacio@clubnatacioblanes.com
+                    Correu: <a href=mailto:"e.lopez3@sapalomera.cat">informacio@clubnatacioblanes.com</a>
         </div>
     </section>
 </html>
