--- a/html/horaripiscina.html
+++ b/html/horaripiscina.html
@@ -6,6 +6,7 @@
     
     <meta charset="UTF-8">
     <title>Club Natacio Blanes</title>
+    <link rel="stylesheet" href="./../css/horari.css">
     <link rel="stylesheet" href="./../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/x-icon" href="./.././../resources/images-removebg-preview.png">
@@ -21,9 +22,9 @@
             <a class="title-text" href="./../index.html">Club Natacio Blanes</a>
         </div>
         <div class="menu-div">
-            <a class="menu-option" href="./galeria.html">Galeria</a>
-            <a class="menu-option" href="./galeria.html">Qui som</a>
-            <a class="menu-option" href="./galeria.html">Contacte</a>
+                <a class="menu-option" href="galeria.html">Galeria</a>
+                <a class="menu-option" href="qui_som.html">Qui som</a>
+                <a class="menu-option" href="contacte.html">Contacte</a>
             <div class="button-div">
                 <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"></path>
@@ -112,9 +113,9 @@
 </div>
 <section class="bottom">
     <div class="bottom-div">
-            <pre class="text-white">
+            <pre class="bottom-text">
                 Telèfon: 972 35 00 00
-                Correu: informacio@clubnatacioblanes.com
+                Correu: <a href=mailto:"e.lopez3@sapalomera.cat">informacio@clubnatacioblanes.com</a>
     </div>
 </section>
     
