--- a/html/qui_som.html
+++ b/html/qui_som.html
@@ -2,7 +2,7 @@
 <head>
     <title>Club Natacio Blanes</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="icon" type="image/x-icon" href="resources/images-removebg-preview.png">
 </head>
@@ -10,16 +10,16 @@
     <section class="top">
         <div class="top-div">
             <div class="logo-div">
-                <img class="logo" src="resources/images-removebg-preview.png">
+                <img class="logo" src="./../resources/images-removebg-preview.png">
                 
             </div>
             <div class="title-div">
-                <a class="title-text" href="index.html">Club Natacio Blanes</a>
+                <a class="title-text" href="./../index.html">Club Natacio Blanes</a>
             </div>
             <div class="menu-div">
-                <a class="menu-option" href="html/galeria.html">Galeria</a>
-                <a class="menu-option" href="html/qui_som.html">Qui som</a>
-                <a class="menu-option" href="html/contacte.html">Contacte</a>
+                <a class="menu-option" href="galeria.html">Galeria</a>
+                <a class="menu-option" href="qui_som.html">Qui som</a>
+                <a class="menu-option" href="contacte.html">Contacte</a>
                 <div class="button-div">
                     <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"></path>
@@ -45,24 +45,13 @@
 
             </div>
             <div class="mid-div-mid">
-<h1 class="text-header">
-    Club de Natacio Blanes</h1>
-<pre class="text-black">
-    Som un club esportiu especialitzat en esport d'aigua en concret
-    la natació. Disposem de piscina coberta i piscina exterior
-    per a tots els nostres socis. A més, disposem de diferents
-    activitats com aquagym, natació sincronitzada, waterpolo
-    i moltes més activitats. Si vols formar part del nostre
-    club, no dubtis en posar-te en contacte amb nosaltres.
-
-    Ens trobem situasts a la ciutat esportiva de Blanes.
-<iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95264.6009514329!2d2.5579128419764925!3d41.741687804921476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bb3d83c9556c6d%3A0xe6a548f80cadcbe2!2sCiutat%20Esportiva%20de%20Blanes!5e0!3m2!1sca!2ses!4v1708103730917!5m2!1sca!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-
-
-</pre>
-
+                <pre class="text-black">
+El nostre club esta especialitzat en esport d'aigua, en concret la natació. 
+Disposem de piscina coberta i piscina exterior per a tots els nostres socis.
+A més, disposem de diferents activitats com aquagym, natació sincronitzada,
+waterpolo i moltes més activitats. Si vols formar part del nostre club,
+no dubtis en posar-te en contacte amb nosaltres.
+                </pre>
             </div>
             <div class="mid-div-right">
             </div>
