--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,3 @@
-
-<div class="menu-div">
-    <button class="menu">Menu</button>
-    <div class="dropdown">
-        <a href="#">Opción 1</a>
-        <a href="#">Opción 2</a>
-        <a href="#">Opción 3</a>
-    </div>
-</div>
+<head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+</head>
