--- a/html/activitats.html
+++ b/html/activitats.html
@@ -18,7 +18,7 @@
             </div>
             <div class="menu-div">
                 <a class="menu-option" href="./galeria.html">Galeria</a>
-                <a class="menu-option" href="./quisom.html">Qui som</a>
+                <a class="menu-option" href="./qui_som.html">Qui som</a>
                 <a class="menu-option" href="./contacte.html">Contacte</a>
                 <div class="button-div">
                     <button class="menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-list" viewBox="0 0 16 16">
