--- a/html/qui_som.html
+++ b/html/qui_som.html
@@ -3,8 +3,9 @@
     <title>Club Natacio Blanes</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./../css/style.css">
+    <link rel="stylesheet" href="./../css/qui_som.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="icon" type="image/x-icon" href="resources/images-removebg-preview.png">
+    <link rel="icon" type="image/x-icon" href="./../resources/images-removebg-preview.png">
 </head>
 <html>
     <section class="top">
@@ -28,10 +29,10 @@
                 
                 
                 <div class="dropdown">
-                    <a href="html/carnet_piscina.html">Carnet de piscina</a>
-                    <a href="html/horaripiscina.html">Horari de piscina</a> 
-                    <a href="html/inscripcions.html">Inscripcions</a>
-                    <a href="html/activitats.html">Activitats</a>
+                    <a href="carnet_piscina.html">Carnet de piscina</a>
+                    <a href="horaripiscina.html">Horari de piscina</a> 
+                    <a href="inscripcions.html">Inscripcions</a>
+                    <a href="activitats.html">Activitats</a>
                 </div>
                 </div>
             </div>
@@ -51,7 +52,22 @@ Disposem de piscina coberta i piscina exterior per a tots els nostres socis.
 A més, disposem de diferents activitats com aquagym, natació sincronitzada,
 waterpolo i moltes més activitats. Si vols formar part del nostre club,
 no dubtis en posar-te en contacte amb nosaltres.
+
                 </pre>
+                <div class="socios">
+                    <div class="socio-item">
+                        <img class="item1-img" src="./../resources/qui_som/1.jfif">
+                        <p class="item1-p">President</p>
+                    </div>
+                    <div class="socio-item">
+                        <img class="item2-img" src="./../resources/qui_som/2.jfif">
+                        <p class="item2-p">Director esportiu</p>
+                    </div>
+                    <div class="socio-item">
+                        <img class="item3-img" src="./../resources/qui_som/3.jfif">
+                        <p class="item3-p">Coordinador esportiu</p>
+                    </div>
+                </div>
             </div>
             <div class="mid-div-right">
             </div>
